turn_lexer_derive/test/test04-reject_data_enum.stderr
error: Lexer enum variants must be units (try "One,").
 --> $DIR/test04-reject_data_enum.rs:7:5
  |
7 |     One(i32),
  |     ^^^

error: Lexer enum variants must be units (try "Two,").
  --> $DIR/test04-reject_data_enum.rs:18:5
   |
18 |     Two{two: bool},
   |     ^^^
